tests/for_postfix_dec_bad.hop
// Verifies invalid postfix decrement diagnostic in for post clause.
fn main() {
    for i := 100; i > 0; i-- {
    }
}
